--- a/frontend/ello-book-assignment/index.html
+++ b/frontend/ello-book-assignment/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ello Book Assignment App</title>
     <style>
-      @import url('https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200..1000;1,200..1000&display=swap');
+      @import url("https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200..1000;1,200..1000&display=swap");
     </style>
   </head>
   <body>
